broadcast issue resolve for presenter not showing to all user

--- a/public/css/styles1.css
+++ b/public/css/styles1.css
@@ -571,6 +571,8 @@ nav button.navbar-toggle {
     background: #f2f4f5;
 }
 
+.main-content .box { overflow: hidden; }
+
 .main-content.two-two {
     flex-direction: column;
 }
@@ -710,6 +712,17 @@ nav button.navbar-toggle {
 }
 
 /* Main Content end */
+
+/* Webcams start */
+
+.video-holder video {
+    position: absolute;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+/* Webcams end */
 
 /* Unsupported page start */
 
